# PaintGL

./: CMakeLists.txt  Shader.cpp  installLib.sh  main.cpp  myGLWidget.cpp  myWindow.cpp  myWindow.h
headers/: Shader.h  myGLWidget.h  myWindow.h
shaders/: fragmentShader.vs  vertexShader.vs
src/: Shader.cpp  main.cpp  myGLWidget.cpp  myWindow.cpp
